--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.0",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "shortid-extend": "^0.0.3",
     "uuid": "^11.0.3"
